[project]
name = "4-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "uvicorn>=0.50.0",
    "watchdog>=6.0.0",
]
